Ajout deploiement .exe